# 4306-Donaldson-Project

./: .gitignore  PythonTestFile.py  README.md  databaseSetup.sql  install.md  jsonTest.py  keyGetTest.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  testClassifier.txt  testConnect.py  vaderInconsistency.py
helpFiles/: mysqlConnectorHelp.txt  mysqlCursorHelp.txt  tweepyClientHelp.txt  tweepyGetUserTweetsHelp.txt
oldPrototyping/: Iteration2.py  attempt1.py  helpFiles.py  keyGetTest.py  sentimentTest.py  testFolders.py
prototyping/: Iteration2.py  attempt1.py  attempt2.py  csvfile.csv  jsonTest.py  keyGetTest.py  requirements.txt  sentimentTest.py  testConnect.py  testFolders.py
prototyping/HandleManagement/: HandleDataCollector.py  ManageHandles.py
prototyping/NLTK/VaderAnalysis/: TweetAnalysis  TweetAnalysis.py
prototyping/PowertrainManagement/: CompanyPowertrains.py  LabelTweetsWithTechs.py  ManageKeywords.py  __init__.py
prototyping/Reporting&UI/: CSVOutput.py
prototyping/ReportingUI/: CSVOutput.py
prototyping/SharedConnectors/: __init__.py  dbConnection.py  twitterConnection.py
prototyping/TweetManagement/: AddTweetsToDB.py  ManageTweetsInDB.py  __init__.py
prototyping/secretVADER/: secretVADER.py  vader_experimental.py
prototyping/tdConnectors/: __init__.py  dbConnection.py
prototyping/tdHandles/: HandleDataCollector.py  ManageHandles.py  __init__.py
prototyping/testFolder/: PythonTestFile.py
prototyping/vader_experimental/: __init__.py  vader_experimental.py
src/: csvfile.csv
src/Donaldson-ASU-Twitter-Analysis-Tool/: __main__.py
src/Donaldson-ASU-Twitter-Analysis-Tool/PowertrainManagement/: CompanyPowertrains.py
src/Donaldson-ASU-Twitter-Analysis-Tool/ReportingUI/: CSVOutput.py
src/Donaldson_ASU_Twitter/HandleManagement/: HandleDataCollector.py
src/Donaldson_ASU_Twitter/PowertrainManagement/: ManageKeywords.py
src/Donaldson_ASU_Twitter/ReportingUI/: __init__.py
src/Donaldson_ASU_Twitter/SharedConnectors/: dbConnection.py  twitterConnection.py
src/Donaldson_ASU_Twitter/TweetManagement/: AddTweetsToDB.py
src/donaldson_asu_twitter/: __init__.py  __main__.py  old_main_.old
src/donaldson_asu_twitter/HandleManagement/: HandleDataCollector.py  ManageHandles.py
src/donaldson_asu_twitter/PowertrainManagement/: CompanyPowertrains.py  LabelTweetsWithTechs.py  ManageKeywords.py
src/donaldson_asu_twitter/ReportingUI/: CSVOutput.py  dataGathering.py  matPlotThickens.py
src/donaldson_asu_twitter/SharedConnectors/: dbConnection.py  twitterConnection.py
src/donaldson_asu_twitter/TweetManagement/: AddTweetsToDB.py  ManageTweetsInDB.py
src/donaldson_asu_twitter/VaderAnalysis/: TweetAnalysis.py  __init__.py  vader_experimental.py
tests/: conftest.py  test_handle_data_collector.py  test_manage_handles.py  test_vader_basic.py
uml/: Access Matrix  Access Matrix.drawio  AddCompanySequence v1.drawio  DatabaseInteraction  Hardware Mapping.drawio  Interface diagram.drawio  Iteration4SubsystemClassDiagram.drawio  LordVader's Class Diagram.drawio  MovingTweetsIntoDB  MovingTweetsIntoDB.drawio  PackageDiagram.drawio  Selecting Companies in DataBase  Selecting Companies in DataBase.drawio  Tweet Storage and Selection Class Diagram.drawio  UML class diagram  Untitled Diagram.drawio  architecture  architecture.drawio  database  database.drawio  deleteme  dynamic.drawio  relationships  relationships.drawio  useCaseModel1  useCaseModel2.drawio  useCaseModel3.drawio
wikiDocs/: wikiDoc3.md  wikiDoc4.md
wikiPageCollaborationDocs/: iteration3.md
