# [metadata]
# name = donaldson_asu_twitter
# description = Tool built by students at ASU for Donaldson Company to pull down Twitter data from various companies for analysis (including VADER analysis).
# author = Joel King, Alex Garcia, Adebolanle Balogun
# platforms = unix, linux, osx, cygwin, win32
# # Needs classifiers?
# classifiers =
#     Programming Language :: Python :: 3 :: Only
#     Development Status :: 3 - Alpha
#     Environment :: Console
#     Intended Audience :: Manufacturing
#     Intended Audience :: Science/Research
#     Intended Audience :: Education
#     Natural Language :: English
#     Programming Language :: Python :: 3.9
#     Programming Language :: Python :: 3.10
#     Programming Language :: Python :: 3.11
#     Topic :: Database :: Front-Ends
# # Needs license? Maybe? license and license_file?

# [options]
# packages = 
#     donaldson_asu_twitter
# install_requires = 
#     mysql-connector-python>=8.0.31
#     nltk>=3.7
#     numpy>=1.23.4
#     tweepy>=4.11.0
# python_requires = >=3.9
# package_dir =
#     =src
# # zip_safe?

# [options.extras_require]
# testing = 
#     pytest
#     pytest-cov

# [options.package_data]
# DonaldsonASUTwitter = py.typed